Fix nao picture bad alignment on lollipop and lower android version.

--- a/src/components/sidenav-main/sidenav-main.component.scss
+++ b/src/components/sidenav-main/sidenav-main.component.scss
@@ -1,6 +1,9 @@
 sidenav-main {
   #menuTopPanel {
     width: 100%;
+    display: -webkit-flex;
+    -webkit-align-items: center;
+    -webkit-justify-content: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,7 +26,6 @@ sidenav-main {
       border-radius: 999px;
       border: 3px solid white;
       overflow: hidden;
-      position: absolute;
       width: 25%;
       height: auto;
       background-color: #6b9697;
